SEO index.html v1

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,28 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>PokeDuel</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description"
+    content="PokeDuel es una app web en la cual puedes librar múltiples combates pokémon contra la IA. ¡Sólo has de registrarte para poder disfrutar de PokeDuel!">
+  <meta name="keywords" content="PokeDuel, combate, batalla, pokémon, fight, duel, game, juego, angular" >
+  <meta name="robots" content="index,follow">
+  <meta name="copyright" content="Este obra está bajo una licencia de Creative Commons Reconocimiento-SinObraDerivada 4.0
+  Internacional, por Kim Asiao y Santiago Martínez">
+  <meta name="author" content="Onika Kim Asiao y Santiago Martínez">
   <link rel="icon" type="image/x-icon" href="./assets/img/pokemon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
